--- a/src/miscs/styles/GlobalConfig.css
+++ b/src/miscs/styles/GlobalConfig.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 body{
+    scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
+}
+html{
+    scroll-behavior: smooth;
 }
